syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "AuthServer.Shared.Client";

service Client {
  rpc List (google.protobuf.Empty) returns (ClientListResults);
  rpc Add (ClientCreationRequest) returns (ClientCreationResponse);
}

message ClientListResults {
  repeated ClientListResult results = 1;
}

message ClientListResult {
  string id = 1;
  string name = 2;
}

message ClientCreationRequest {
  string name = 1;
}

message ClientCreationResponse {
  bool success = 1;
}